--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
 .control{
@@ -15,9 +16,11 @@ body {
 
 .cardstyle{
     max-width: 500px;
-    border: 1px solid black;
+    border: 2px solid rgb(225, 225, 225,.2);
     padding: 80px;
     border-radius: 20px;
+    backdrop-filter: blur(8px);
+    box-shadow: 0 0 10px rgb(0, 0, 0,.2);
 }
 
 .form-control {
@@ -39,3 +42,80 @@ body {
     display: none;
     width: fit-content;
 }
+
+.button-85 {
+    margin-top: 1rem;
+    margin-left: 10px;
+    padding: 5px 15px;
+    border: none;
+    outline: none;
+    color: rgb(255, 255, 255);
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+  }
+  
+  .button-85:before {
+    content: "";
+    background: linear-gradient(
+      45deg,
+      #ff0000,
+      #ff7300,
+      #fffb00,
+      #48ff00,
+      #00ffd5,
+      #002bff,
+      #7a00ff,
+      #ff00c8,
+      #ff0000
+    );
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    -webkit-filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing-button-85 20s linear infinite;
+    transition: opacity 0.3s ease-in-out;
+    border-radius: 10px;
+  }
+  
+  @keyframes glowing-button-85 {
+    0% {
+      background-position: 0 0;
+    }
+    50% {
+      background-position: 400% 0;
+    }
+    100% {
+      background-position: 0 0;
+    }
+  }
+  
+  .button-85:after {
+    z-index: -1;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #222;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+  }
+
+  .span-text{
+    color: white;
+  }
+
+  .card-title text-center{
+    color: white;
+  }
